# Titanfall-3

./: .clang-format  CMakeLists.txt  README.md  enviroment.cpp  gitignore.gitignore  level_gen.cpp  main.h  server.cpp
Graph_lib/: Window.h
Titanfall-3/: CMakeLists.txt  client.cpp  client.h  draw.cpp  draw.h  enviroment.cpp  enviroment.h  environment.cpp  environment.h  err_handle.cpp  err_handle.h  game_logic.cpp  game_logic.h  graphics.cpp  graphics.h  level_gen.cpp  level_gen.h  main.cpp  parser.cpp  parser.h  server.cpp  server.h  settings.h  sounds.cpp  sounds.h
data/: to-do.txt
data/ЛЕВЕЛ ГЕН БУДУЩЕГО/: level_gen.cpp  level_gen.h
lib/Graph_lib/: Graph.h  Point.h  Window.cpp  fltk.h
tests of other teams and their classes/Chess/: Review.md
tests of other teams and their classes/Калькулятор матриц/: Review.md
